--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Google Clone</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
 </head>
 <body>
     <header>
@@ -19,5 +20,33 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="main-logo">
+            <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" title="Logo de google" alt="Logo de google">
+        </section>
+        <section class="main-input">
+            <div class="main-input-container">
+                <span class="material-icons-outlined">search</span>
+                <input type="text">
+                <a class="micro-icon" href="#"><span class="material-icons-outlined">
+                    mic
+                    </span></a>
+            </div>
+        </section>
+        <section class="main-buttons">
+            <div>
+                <button>Buscar con Google</button>
+            </div>
+            <div>
+                <button> Me siento con suerte</button>
+            </div>
+        </section>
+        <section class="main-languaje">
+            <p>Ofrecido por Google en: <a href="#">English</a><a href="#">Español (Latinoamérica)</a></p>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
