--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
         </section>
     </main>
     <footer>
+        <section class="footer-country">
+            <div>
+                <p>Venezuela</p>
+            </div>
+        </section>
+        <section class="footer-links">
+            <div>
+                <a href="#">Sobre Google</a>
+                <a href="#">Publicidad</a>
+                <a href="#">Negocios</a>
+                <a href="#">Cómo funciona la Búsqueda</a>
+            </div>
+            <div>
+                <a href="#">Privacidad</a>
+                <a href="#">Condiciones</a>
+                <a href="#">Preferencias</a>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
