--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
             </div>
         </section>
         <section class="footer-links">
-            <div>
-                <a href="#">Sobre Google</a>
-                <a href="#">Publicidad</a>
-                <a href="#">Negocios</a>
-                <a href="#">Cómo funciona la Búsqueda</a>
-            </div>
-            <div>
-                <a href="#">Privacidad</a>
-                <a href="#">Condiciones</a>
-                <a href="#">Preferencias</a>
-            </div>
+            <ul>
+                <li><a href="#">Sobre Google</a></li>
+                <li><a href="#">Publicidad</a></li>
+                <li><a href="#">Negocios</a></li>
+                <li><a href="#">Cómo funciona la Búsqueda</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Privacidad</a></li>
+                <li><a href="#">Condiciones</a></li>
+                <li><a href="#">Preferencias</a></li>
+            </ul>
         </section>
     </footer>
 </body>
